--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,38 +1,7 @@
+<app-navbar></app-navbar>
 <div class="min-h-screen flex flex-col">
-  <!-- Header Section -->
-  <header class="bg-emerald-500 text-white">
-    <div class="container mx-auto px-6 py-4 flex justify-between items-center">
-      <h1 class="text-2xl font-bold">Native Planet</h1>
-      <nav class="hidden md:flex space-x-4">
-        <a href="#" class="hover:text-emerald-200">Home</a>
-        <a href="#about" class="hover:text-emerald-200">About</a>
-        <a href="#services" class="hover:text-emerald-200">Services</a>
-        <a href="#contact" class="hover:text-emerald-200">Contact</a>
-      </nav>
-      <!-- Hamburger Menu for Mobile -->
-      <div class="md:hidden">
-        <button id="menuButton" class="text-white">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            class="h-6 w-6"
-            fill="none"
-            viewBox="0 0 24 24"
-            stroke="currentColor"
-          >
-            <path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="2"
-              d="M4 6h16M4 12h16m-7 6h7"
-            />
-          </svg>
-        </button>
-      </div>
-    </div>
-  </header>
-
   <!-- Hero Section -->
-  <section class="bg-gray-100 py-16">
+  <section class="bg-gray-100 py-16 mt-[64px]">
     <div class="container mx-auto px-6 text-center">
       <h2 class="text-4xl md:text-5xl font-extrabold text-gray-800">
         Transform Your Landscape, Naturally
@@ -61,7 +30,7 @@
       </p>
       <div class="mt-8 flex justify-center">
         <img
-          src="https://via.placeholder.com/600x400"
+          src="https://picsum.photos/seed/picsum/600/400"
           alt="About Native Planet"
           class="rounded-lg shadow-lg w-full sm:w-3/4 lg:w-1/2"
         />
@@ -214,7 +183,10 @@
   <!-- Footer -->
   <footer class="bg-gray-800 text-white py-4">
     <div class="container mx-auto text-center">
-      <p class="text-sm">© 2025 Native Planet. All Rights Reserved.</p>
+      <p class="text-sm">
+        © 2025 Native Planet. All Rights Reserved. Website developed with 💚 in
+        St. Louis.
+      </p>
     </div>
   </footer>
 </div>
