--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,100 @@
 <app-navbar></app-navbar>
 <div class="min-h-screen flex flex-col">
   <!-- Hero Section -->
-  <section class="bg-gray-100 py-16 mt-[64px]">
-    <div class="container mx-auto px-6 text-center">
-      <h2 class="text-4xl md:text-5xl font-extrabold text-gray-800">
-        Transform Your Landscape, Naturally
+  <section class="bg-forest py-16 mt-[64px]">
+    <div class="container mx-auto px-16 text-center">
+      <h2 class="text-4xl md:text-5xl font-extrabold text-accent capitalize">
+        TRANSFORM YOUR LANDSCAPE, NATURALLY
       </h2>
-      <p class="mt-4 text-gray-600 text-lg">
+      <p class="mt-4 text-white text-lg">
         Native Planet specializes in sustainable landscaping solutions tailored
-        for St. Louis, Missouri. Let us bring your outdoor spaces to life.
+        for St. Louis. Let us bring your outdoor spaces to life.
       </p>
-      <a
-        href="#contact"
-        class="inline-block mt-6 bg-emerald-500 text-white py-3 px-6 rounded-lg shadow hover:bg-emerald-600 transition duration-300"
-      >
-        Get in Touch
-      </a>
+      <div class="mt-8 flex justify-center">
+        <img
+          src="https://picsum.photos/id/106/1000/500"
+          alt="About Native Planet"
+          class="rounded-lg shadow-lg w-full"
+        />
+      </div>
+
+      <div class="mt-8 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
+        <!-- BENEFIT 1 -->
+        <div class="bg-forest brightness-150 p-6 rounded-lg shadow-lg">
+          <div class="flex justify-center">
+            <svg
+              class="h-12 w-12 text-accent"
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke="currentColor"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M3 10h11m-4 4H3m5-8h6m-6 0a2 2 0 100 4m-2-4a2 2 0 110 4"
+              />
+            </svg>
+          </div>
+          <h4 class="text-xl text-accent font-bold mt-4">LESS MAINTENANCE</h4>
+          <p class="mt-2 text-white">
+            Native plants require less watering, fertilizing, and pest control,
+            which saves you time and money.
+          </p>
+        </div>
+
+        <!-- BENEFIT 2 -->
+        <div class="bg-forest brightness-150 p-6 rounded-lg shadow-lg">
+          <div class="flex justify-center">
+            <svg
+              class="h-12 w-12 text-accent"
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke="currentColor"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M4 6h16M4 10h16M4 14h16M4 18h16"
+              />
+            </svg>
+          </div>
+          <h4 class="text-xl text-accent font-bold mt-4">SUPPORT WILDLIFE</h4>
+          <p class="mt-2 text-white">
+            Native plants provide food, shelter, and breeding grounds for local
+            wildlife, like birds, butterflies, bees, and other pollinators.
+          </p>
+        </div>
+
+        <!-- BENEFIT 3 -->
+        <div class="bg-forest brightness-150 p-6 rounded-lg shadow-lg">
+          <div class="flex justify-center">
+            <svg
+              class="h-12 w-12 text-accent"
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke="currentColor"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M12 4v16m8-8H4"
+              />
+            </svg>
+          </div>
+          <h4 class="text-xl font-bold mt-4 text-accent">SUSTAINABILITY</h4>
+          <p class="mt-2 text-white">
+            Native plants are naturally adapted to the local environment,
+            meaning they require less water and are more resilient against local
+            pests & disease.
+          </p>
+        </div>
+      </div>
     </div>
   </section>
 
@@ -28,13 +107,6 @@
         native plants and sustainable practices. Our mission is to enhance the
         beauty of your property while supporting local ecosystems.
       </p>
-      <div class="mt-8 flex justify-center">
-        <img
-          src="https://picsum.photos/seed/picsum/600/400"
-          alt="About Native Planet"
-          class="rounded-lg shadow-lg w-full sm:w-3/4 lg:w-1/2"
-        />
-      </div>
     </div>
   </section>
 
