--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,8 +1,8 @@
 <nav
-  class="fixed w-full text-white transition-all duration-300 shadow bg-emerald-900"
+  class="fixed w-full text-white transition-all duration-300 shadow bg-forest"
 >
   <div
-    class="relative container mx-auto px-6 flex justify-between items-center transition-all duration-300 z-50 bg-emerald-900"
+    class="relative container mx-auto px-6 flex justify-between items-center transition-all duration-300 z-50 bg-forest"
     [class.py-4]="!isScrolled"
     [class.py-2]="isScrolled"
     [class.h-16]="!isScrolled"
@@ -12,12 +12,20 @@
     <a href="/" class="text-2xl font-bold tracking-wide"> Native Planet </a>
 
     <!-- Desktop Menu -->
-    <div class="hidden md:flex space-x-6">
-      <a href="#" class="hover:text-emerald-400">Home</a>
-      <a href="#about" class="hover:text-emerald-400">About</a>
-      <a href="#services" class="hover:text-emerald-400">Services</a>
-      <a href="#contact" class="hover:text-emerald-400">Contact</a>
+    <div class="hidden md:flex space-x-6 font-bold">
+      <a href="#" class="hover:text-emerald-400">HOME</a>
+      <a href="#about" class="hover:text-emerald-400">ABOUT</a>
+      <a href="#services" class="hover:text-emerald-400">SERVICES</a>
+      <a href="#contact" class="hover:text-emerald-400">CONTACT</a>
     </div>
+
+    <button
+      class="cursor-pointer transition-all duration-300 inline-block bg-white text-forest py-2 px-4 rounded-lg shadow hover:bg-emerald-600 hover:text-white transition duration-300"
+      [class.py-2]="!isScrolled"
+      [class.py-1]="isScrolled"
+    >
+      Get in Touch
+    </button>
 
     <!-- Hamburger Button for Mobile -->
     <button
