rename styles for easy swap and other minor tweaks

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,18 @@
 <app-navbar></app-navbar>
-<div class="min-h-screen flex flex-col">
+<div class="min-h-screen flex flex-col bg-main">
   <!-- Hero Section -->
-  <section class="bg-forest py-16 mt-[64px]">
+  <section class="bg-main py-16 mt-[64px]">
     <div class="container mx-auto px-16 text-center">
-      <h2 class="text-4xl md:text-5xl font-extrabold text-accent capitalize">
-        TRANSFORM YOUR LANDSCAPE, NATURALLY
-      </h2>
-      <p class="mt-4 text-white text-lg">
-        Native Planet specializes in sustainable landscaping solutions tailored
-        for St. Louis. Let us bring your outdoor spaces to life.
-      </p>
+      <div class="w-full lg:w-1/2 mx-auto">
+        <h2 class="text-4xl md:text-5xl font-extrabold text-accent capitalize">
+          TRANSFORM YOUR LANDSCAPE, NATURALLY
+        </h2>
+        <p class="mt-4 text-white text-xl">
+          Native Planet specializes in sustainable landscaping solutions
+          tailored to St. Louis. Let us bring your outdoor spaces to life.
+        </p>
+      </div>
+
       <div class="mt-8 flex justify-center">
         <img
           src="https://picsum.photos/id/106/1000/500"
@@ -20,7 +23,7 @@
 
       <div class="mt-8 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
         <!-- BENEFIT 1 -->
-        <div class="bg-forest brightness-150 p-6 rounded-lg shadow-lg">
+        <div class="bg-main brightness-150 p-6 rounded-lg shadow-lg">
           <div class="flex justify-center">
             <svg
               class="h-12 w-12 text-accent"
@@ -45,7 +48,7 @@
         </div>
 
         <!-- BENEFIT 2 -->
-        <div class="bg-forest brightness-150 p-6 rounded-lg shadow-lg">
+        <div class="bg-main brightness-150 p-6 rounded-lg shadow-lg">
           <div class="flex justify-center">
             <svg
               class="h-12 w-12 text-accent"
@@ -70,7 +73,7 @@
         </div>
 
         <!-- BENEFIT 3 -->
-        <div class="bg-forest brightness-150 p-6 rounded-lg shadow-lg">
+        <div class="bg-main brightness-150 p-6 rounded-lg shadow-lg">
           <div class="flex justify-center">
             <svg
               class="h-12 w-12 text-accent"
