--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="fixed w-full text-white transition-all duration-300 shadow bg-main">
   <div
-    class="relative container mx-auto px-6 flex justify-between items-center transition-all duration-300 z-50 bg-main"
+    class="relative mx-auto px-6 flex justify-between items-center transition-all duration-300 z-50 bg-main w-full"
     [class.py-4]="!isScrolled"
     [class.py-2]="isScrolled"
     [class.h-16]="!isScrolled"
@@ -28,23 +28,10 @@
     <!-- Hamburger Button for Mobile -->
     <button
       id="menuButton"
-      class="md:hidden focus:outline-none"
+      class="md:hidden focus:outline-none text-white text-3xl flex self-center"
       (click)="toggleMenu()"
     >
-      <svg
-        xmlns="http://www.w3.org/2000/svg"
-        class="h-6 w-6 text-white"
-        fill="none"
-        viewBox="0 0 24 24"
-        stroke="currentColor"
-      >
-        <path
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          stroke-width="2"
-          d="M4 6h16M4 12h16m-7 6h7"
-        />
-      </svg>
+      <ng-icon name="heroBars3"></ng-icon>
     </button>
   </div>
 
