add some copy and padding to footer

--- a/src/app/components/pages/landing-page/landing-page.component.html
+++ b/src/app/components/pages/landing-page/landing-page.component.html
@@ -64,12 +64,25 @@
   <!-- About Section -->
   <section id="about" class="py-16 bg-white">
     <div class="container mx-auto px-6 text-center">
-      <h3 class="text-3xl font-bold text-gray-800">About Us</h3>
+      <h3 class="text-3xl font-bold text-gray-800">
+        THE MAN WITH THE PLAN<span class="text-gray-300">TS</span>
+      </h3>
       <p class="mt-4 text-gray-600 text-lg">
+        With degrees in biology & horticulture, you could say that native plants
+        have been a life-long passion for Nick Ciaramitaro. After graduating
+        from Mizzou and turning down a full-ride to law school, Nick realized
+        his true passion was in conservation and spent the next few years
+        pursuing that dream leading conservation and emergency response teams
+        for Americorps St. Louis. After spending a few more years in the
+        landscaping industry, Nick decided to take the leap and start Native
+        Planet to spread his passion for native plants all around the St. Louis
+        area.
+      </p>
+      <!-- <p class="mt-4 text-gray-600 text-lg">
         At Native Planet, we focus on creating eco-friendly landscapes using
         native plants and sustainable practices. Our mission is to enhance the
         beauty of your property while supporting local ecosystems.
-      </p>
+      </p> -->
     </div>
   </section>
 
