--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer class="bg-gray-800 text-white py-4">
   <div class="container mx-auto text-center">
-    <p class="text-sm">
+    <p class="text-sm px-2">
       © {{ year }} Native Planet. All Rights Reserved. Website developed with 💚
       in St. Louis.
     </p>
