--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,6 @@
-<nav class="fixed w-full text-white transition-all duration-300 shadow bg-main">
+<nav
+  class="z-50 fixed w-full text-white transition-all duration-300 shadow bg-main"
+>
   <div
     class="relative mx-auto px-6 flex justify-between items-center transition-all duration-300 z-50 bg-main w-full"
     [class.py-4]="!isScrolled"
