--- a/src/app/components/pages/landing-page/landing-page.component.html
+++ b/src/app/components/pages/landing-page/landing-page.component.html
@@ -162,8 +162,8 @@
       >
         <!-- Email -->
         <a
-          href="mailto:info@nativeplanetstl.com"
-          class="flex items-center space-x-2 text-emerald-500 hover:text-emerald-600"
+          (click)="openEmailClient()"
+          class="flex items-center space-x-2 text-emerald-500 hover:text-emerald-600 cursor-pointer"
         >
           <ng-icon name="heroEnvelope"></ng-icon>
           <span>Email Us</span>
