close navbar when clicking outside

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,6 @@
 <nav
   class="z-50 fixed w-full text-white transition-all duration-300 shadow bg-main"
+  #navbar
 >
   <div
     class="relative mx-auto px-6 flex justify-between items-center transition-all duration-300 z-50 bg-main w-full"
