update elements for consistency

--- a/src/app/components/pages/landing-page/landing-page.component.html
+++ b/src/app/components/pages/landing-page/landing-page.component.html
@@ -107,7 +107,7 @@
   <!-- Services Section -->
   <section id="services" class="bg-gray-100 py-16">
     <div class="container mx-auto px-6 text-center">
-      <h1 class="text-3xl font-bold text-gray-800">Our Services</h1>
+      <h1 class="text-3xl font-bold text-gray-800">OUR SERVICES</h1>
       <p class="mt-4 text-gray-600 text-lg">
         Explore our range of services designed to meet all your landscaping
         needs.
@@ -153,7 +153,7 @@
   <!-- Contact Section -->
   <section id="contact" class="py-16 bg-white">
     <div class="container mx-auto px-6 text-center">
-      <h1 class="text-3xl font-bold text-gray-800">Get in Touch</h1>
+      <h1 class="text-3xl font-bold text-gray-800">GET IN TOUCH</h1>
       <p class="mt-4 text-gray-600 text-lg">
         Have questions or ready to get started? Contact us today!
       </p>
@@ -167,7 +167,7 @@
           class="flex items-center space-x-2 font-bold text-xl text-main hover:text-emerald-600 cursor-pointer"
         >
           <ng-icon name="heroEnvelope"></ng-icon>
-          <span>Email Us</span>
+          <span>info&#64;nativeplanetstl.com</span>
         </button>
 
         <!-- Phone -->
